--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@astrojs/mdx": "^4.2.6",
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.3.1",
-    "astro": "^5.7.12"
+    "@tailwindcss/vite": "^4.1.6",
+    "astro": "^5.7.12",
+    "tailwindcss": "^4.1.6",
+    "@emailjs/browser": "^4.4.1"
   }
 }
